--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.14",
+    "@react-navigation/native-stack": "^6.9.22",
     "react": "18.2.0",
     "react-native": "0.73.4",
-    "react-native-reanimated": "^3.7.1"
+    "react-native-animatable": "^1.4.0",
+    "react-native-reanimated": "^3.7.1",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
