--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
+    "@react-navigation/stack": "^6.3.25",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-animatable": "^1.4.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.7.1",
     "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.29.0"
+    "react-native-screens": "^3.29.0",
+    "react-navigation-shared-element": "^3.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
